package Sesi7.Inheritance.BangunDatar;

public class BangunDatar {
    public String luas() {
        return "Menghitung Luas Bangun Datar";
    }

    public String keliling() {
        return "Menghitung Keliling Bangun Datar";
    }
}